--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
 		"phpunit/phpunit": "~3.7"
 	},
 	"autoload": {
-		"psr-0": {
-			"Kir\\RegExp\\Builder\\": ["src/", "tests/"]
+		"psr-4": {
+			"Kir\\RegExp\\Builder\\": "src/"
 		}
 	}
 }
